<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">myprof</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="myProf">My Prof</string>
    <string name="name">Name</string>
    <string name="text"></string>
    <string name="age">Age</string>
    <string name="status">Status</string>
    <string name="Married">Married</string>
    <string name="Single">Single</string>
    <string name="Submit">Submit</string>

</resources>
